# ai-chatbot

./: .gitignore  CLAUDE.md  PHASE3_IMPLEMENTATION.md  README.md  index.html  main.py  message_correction_requirements.md  package-lock.json  package.json  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_patterns.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
database/: models.py
services/: ai_model_factory.py  base_ai_service.py  cache_service.py  claude_service.py  correction_service.py  correction_variant.py  error_handler.py  local_llm_service.py  openai_service.py
src/: App.css  App.tsx  index.css
src/components/: ChatInterface.css  ChatInterface.tsx  ChatMessages.css  ChatMessages.tsx  CorrectionHistory.css  CorrectionHistory.tsx  CorrectionModal.css  CorrectionModal.tsx  CorrectionStyleSelector.css  CorrectionStyleSelector.tsx  MessageInput.css  MessageInput.tsx  ModelSelector.css  ModelSelector.tsx
src/services/: api.ts
